modify internal php link to html

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/template.dwt.php" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/template.dwt.html" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="includecssjs" -->
@@ -52,12 +52,12 @@
 </div>
 
 <ul id="menu">
-	<li id="me-ind"><a href="index.php"></a></li>
-    <li id="me-abo"><a href="about.php"></a></li>
-    <li id="me-cha"><a href="character.php"></a></li>
-    <li id="me-ter"><a href="term.php"></a></li>
-    <li id="me-gen"><a href="gensoukyou.php"></a></li>
-    <li id="me-lin"><a href="link.php"></a></li>
+	<li id="me-ind"><a href="index.html"></a></li>
+    <li id="me-abo"><a href="about.html"></a></li>
+    <li id="me-cha"><a href="character.html"></a></li>
+    <li id="me-ter"><a href="term.html"></a></li>
+    <li id="me-gen"><a href="gensoukyou.html"></a></li>
+    <li id="me-lin"><a href="link.html"></a></li>
 </ul>
 <div id=content2">
 <div id="leftbar"><!-- InstanceBeginEditable name="EditRegion3" -->
