--- a/gensoukyou.html
+++ b/gensoukyou.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/template2.dwt.php" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/template2.dwt.html" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -32,12 +32,12 @@
 </div>
 
 <ul id="menu">
-	<li id="me-ind"><a href="index.php"></a></li>
-    <li id="me-abo"><a href="about.php"></a></li>
-    <li id="me-cha"><a href="character.php"></a></li>
-    <li id="me-ter"><a href="term.php"></a></li>
-    <li id="me-gen"><a href="gensoukyou.php"></a></li>
-    <li id="me-lin"><a href="link.php"></a></li>
+	<li id="me-ind"><a href="index.html"></a></li>
+    <li id="me-abo"><a href="about.html"></a></li>
+    <li id="me-cha"><a href="character.html"></a></li>
+    <li id="me-ter"><a href="term.html"></a></li>
+    <li id="me-gen"><a href="gensoukyou.html"></a></li>
+    <li id="me-lin"><a href="link.html"></a></li>
 </ul>
 
 
@@ -48,19 +48,19 @@
 
 <img src="./image/map2.png" alt="" usemap="#imgmap1" style="border: none" />
 <map id="imgmap1" name="imgmap1">
-	<area shape="rect" alt="紅魔館" title="紅魔館" coords="732,316,818,337" href="./gensoukyou_detail.php#koumakyou" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="霧之湖" title="霧之湖" coords="635,227,721,249" href="./gensoukyou_detail.php#kirinomizu" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="迷途竹林" title="迷途竹林" coords="579,105,661,126" href="./gensoukyou_detail.php#mayoi" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="人里" title="人里" coords="582,340,666,362" href="./gensoukyou_detail.php#hitozato" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="天界" title="天界" coords="495,188,578,211" href="./gensoukyou_detail.php#tenkai" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="永遠亭" title="永遠亭" coords="439,77,523,99" href="./gensoukyou_detail.php#eientei" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="魔法森林" title="魔法森林" coords="419,286,502,308" href="./gensoukyou_detail.php#mahoumori" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="命蓮寺" title="命蓮寺" coords="314,160,400,182" href="./gensoukyou_detail.php#myourenzi" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="博麗神社" title="博麗神社" coords="315,322,401,343" href="./gensoukyou_detail.php#hakurei" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="妖怪之山" title="妖怪之山" coords="161,123,245,143" href="./gensoukyou_detail.php#youkainoyama" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="守矢神社" title="守矢神社" coords="19,97,105,119" href="./gensoukyou_detail.php#moriyanozija" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="地獄街道" title="地獄街道" coords="50,219,136,241" href="./gensoukyou_detail.php#tireden" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
-    <area shape="rect" alt="地靈殿" title="地靈殿" coords="105,343,191,365" href="./gensoukyou_detail.php#kyuuzigokukaidou" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+	<area shape="rect" alt="紅魔館" title="紅魔館" coords="732,316,818,337" href="./gensoukyou_detail.html#koumakyou" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="霧之湖" title="霧之湖" coords="635,227,721,249" href="./gensoukyou_detail.html#kirinomizu" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="迷途竹林" title="迷途竹林" coords="579,105,661,126" href="./gensoukyou_detail.html#mayoi" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="人里" title="人里" coords="582,340,666,362" href="./gensoukyou_detail.html#hitozato" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="天界" title="天界" coords="495,188,578,211" href="./gensoukyou_detail.html#tenkai" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="永遠亭" title="永遠亭" coords="439,77,523,99" href="./gensoukyou_detail.html#eientei" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="魔法森林" title="魔法森林" coords="419,286,502,308" href="./gensoukyou_detail.html#mahoumori" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="命蓮寺" title="命蓮寺" coords="314,160,400,182" href="./gensoukyou_detail.html#myourenzi" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="博麗神社" title="博麗神社" coords="315,322,401,343" href="./gensoukyou_detail.html#hakurei" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="妖怪之山" title="妖怪之山" coords="161,123,245,143" href="./gensoukyou_detail.html#youkainoyama" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="守矢神社" title="守矢神社" coords="19,97,105,119" href="./gensoukyou_detail.html#moriyanozija" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="地獄街道" title="地獄街道" coords="50,219,136,241" href="./gensoukyou_detail.html#tireden" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
+    <area shape="rect" alt="地靈殿" title="地靈殿" coords="105,343,191,365" href="./gensoukyou_detail.html#kyuuzigokukaidou" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})" />
 </map>
 
 
