--- a/term.html
+++ b/term.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/template2.dwt.php" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/template2.dwt.html" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -38,12 +38,12 @@
 </div>
 
 <ul id="menu">
-	<li id="me-ind"><a href="index.php"></a></li>
-    <li id="me-abo"><a href="about.php"></a></li>
-    <li id="me-cha"><a href="character.php"></a></li>
-    <li id="me-ter"><a href="term.php"></a></li>
-    <li id="me-gen"><a href="gensoukyou.php"></a></li>
-    <li id="me-lin"><a href="link.php"></a></li>
+	<li id="me-ind"><a href="index.html"></a></li>
+    <li id="me-abo"><a href="about.html"></a></li>
+    <li id="me-cha"><a href="character.html"></a></li>
+    <li id="me-ter"><a href="term.html"></a></li>
+    <li id="me-gen"><a href="gensoukyou.html"></a></li>
+    <li id="me-lin"><a href="link.html"></a></li>
 </ul>
 
 
@@ -56,85 +56,85 @@
                 <table >
                     <tr>
                         <td >
-<a  href="./term_detail.php#term01" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term01" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	彈幕射擊
 </a>
                         </td>
                         <td >
-<a  href="./term_detail.php#term02" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term02" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	Extra
 </a>
                         </td>
                         <td>
-<a  href="./term_detail.php#term03" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term03" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	東方二次同人
 </a>
                         </td>
                     </tr>
                     <tr>
                         <td >
-<a  href="./term_detail.php#term04" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term04" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	自機狙
 </a>
                         </td>
                         <td>
- <a  href="./term_detail.php#term05" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+ <a  href="./term_detail.html#term05" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	固定彈
 </a>
                         </td>
                         <td>
-<a  href="./term_detail.php#term06" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term06" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	觸手
 </a>
                         </td>
                     </tr>
                     <tr>
                         <td >
-<a  href="./term_detail.php#term07" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term07" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	符卡系統
 </a>
                         </td>
                         <td>
-<a  href="./term_detail.php#term08" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term08" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	判定點
 </a>
                         </td>
                         <td>
-<a  href="./term_detail.php#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 
 </a>
                         </td>
                     </tr>
                     <tr>
                         <td >
-<a  href="./term_detail.php#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	
 </a>
                         </td>
                         <td>
-<a  href="./term_detail.php#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	
 </a>
                         </td>
                         <td>
-<a  href="./term_detail.php#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	
 </a>
                         </td>
                     </tr>
                     <tr>
                         <td >
-<a  href="./term_detail.php#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 	
 </a>
                         </td>
                         <td>
-<a  href="./term_detail.php#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 
 </a>
                         </td>
                         <td>
-<a  href="./term_detail.php#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./term_detail.html#term00" class="termbox" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	 
 </a>
                         </td>
