--- a/character.html
+++ b/character.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/template2.dwt.php" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/template2.dwt.html" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -37,12 +37,12 @@
 </div>
 
 <ul id="menu">
-	<li id="me-ind"><a href="index.php"></a></li>
-    <li id="me-abo"><a href="about.php"></a></li>
-    <li id="me-cha"><a href="character.php"></a></li>
-    <li id="me-ter"><a href="term.php"></a></li>
-    <li id="me-gen"><a href="gensoukyou.php"></a></li>
-    <li id="me-lin"><a href="link.php"></a></li>
+	<li id="me-ind"><a href="index.html"></a></li>
+    <li id="me-abo"><a href="about.html"></a></li>
+    <li id="me-cha"><a href="character.html"></a></li>
+    <li id="me-ter"><a href="term.html"></a></li>
+    <li id="me-gen"><a href="gensoukyou.html"></a></li>
+    <li id="me-lin"><a href="link.html"></a></li>
 </ul>
 
 
@@ -50,7 +50,7 @@
 <div id="content2">
 <!-- InstanceBeginEditable name="EditRegion3" -->
 <div class = "redboard">
-<a  href="./character_detail.php#reimu_detail" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./character_detail.html#reimu_detail" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	<img src="./image/reimu1.jpg" alt="Highslide JS"
 		title="Click to enlarge" />
 
@@ -58,7 +58,7 @@
 </div>
 
 <div class = "yelloboard">
-<a  href="./character_detail.php#marisa_detail" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./character_detail.html#marisa_detail" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	<img src="./image/marisa1.jpg" alt="Highslide JS"
 		title="Click to enlarge" />
 
@@ -67,35 +67,35 @@
 
 
 <div class = "ablueboard">
-<a  href="./character_detail.php#alice_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./character_detail.html#alice_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	<img src="./image/alice1.jpg" alt="Highslide JS"
 		title="Click to enlarge" />
 
 </a>
 </div>
 <div class = "iceboard">
-<a  href="./character_detail.php#cirno_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./character_detail.html#cirno_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	<img src="./image/cirno1.jpg" alt="Highslide JS"
 		title="Click to enlarge" />
 
 </a>
 </div>
 <div class = "bloodboard">
-<a  href="./character_detail.php#remilia_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./character_detail.html#remilia_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	<img src="./image/remilia1.jpg" alt="Highslide JS"
 		title="Click to enlarge" />
 
 </a>
 </div>
 <div class = "whiteboard">
-<a  href="./character_detail.php#youmu_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./character_detail.html#youmu_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	<img src="./image/youmu1.jpg" alt="Highslide JS"
 		title="Click to enlarge" />
 
 </a>
 </div>
 <div class = "sakuraboard">
-<a  href="./character_detail.php#yuyuko_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./character_detail.html#yuyuko_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	<img src="./image/yuyuko1.jpg" alt="Highslide JS"
 		title="Click to enlarge" />
 
@@ -103,7 +103,7 @@
 </div>
 
 <div class = "grayboard">
-<a  href="./character_detail.php#kaguya_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
+<a  href="./character_detail.html#kaguya_detai" class="highslide" onclick="return hs.htmlExpand(this, {objectType: 'ajax'})">
 	<img src="./image/kaguya1.jpg" alt="Highslide JS"
 		title="Click to enlarge" />
 
