--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <div>
  <h4>歡迎來到"東方考古日誌"</h4>
 <table>
+<tr><th>2014.07.27</th><td>更新網站 - 搬移網站至github</td></tr>
 <tr><th>2013.06.16</th><td>更新網站 - 更新地圖以及推薦連結</td></tr>
 <tr><th>2013.06.15</th><td>更新網站 - 更新東方用語</td></tr>
 <tr><th>2013.06.12</th><td>更新網站 - 更新人物介紹以及簡介</td></tr>
